# SensorFusionLib

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  doxygen_main.h  git.h  howto_linux.md  linux_build_script.sh  readme.md
2Dlocalisation/: CMakeLists.txt  Sensor2DPose.cpp  Sensor2DPose.h  Sensor2DPosewCalibration.cpp  Sensor2DPosewCalibration.h  Sensor2DPosewDrift.cpp  Sensor2DPosewDrift.h  Vechicle2D.cpp  Vechicle2D.h
App_Filter/: CMakeLists.txt  main.cpp
App_Plotter/: CMakeLists.txt  CmakeLists.txt  main.cpp
App_Tester/: CMakeLists.txt  CmakeLists.txt  Simulation.cpp  Simulation.h  Simulation_youBot_Kalman.cpp  Simulation_youBot_WAUKF.cpp  main.cpp
App_ZMQPub/: CMakeLists.txt  CmakeLists.txt  main.cpp
App_ZMQSub/: CMakeLists.txt  CmakeLists.txt  main.cpp
App_youBotINSGPSEmulator/: CmakeLists.txt  main.cpp
CommunicationLib/: CmakeLists.txt  ZMQPublisher.cpp  ZMQPublisher.h  ZMQSubscriber.cpp  ZMQSubscriber.h  msg.fbs  msg2buf.cpp  msg2buf.h  msg_generated.h
GINOPLib/: AbsoluthePoseSensor.cpp  AbsoluthePoseSensor.h  CmakeLists.txt  IMUSensor.cpp  IMUSensor.h  INSSensor.cpp  INSSensor.h  youBotSystem.cpp  youBotSystem.h
Lib_Common/: CMakeLists.txt  CmakeLists.txt  DataMsg.cpp  DataMsg.h  StatisticValue.h  Time.cpp  Time.h  TimeMicroSec.cpp  TimeMicroSec.h  TimeUS.cpp  TimeUS.h  defs.h
Lib_Communication/: CMakeLists.txt  CmakeLists.txt  ZMQPublisher.cpp  ZMQPublisher.h  ZMQSubscriber.cpp  ZMQSubscriber.h  msg.fbs  msg2buf.cpp  msg2buf.h  msg_generated.h  script.sh
Lib_Communication/DataMsg/: DataType.py  Msg.py  OperationType.py
Lib_Communication/DataMsgNameSpace/: DataType.py  Msg.py  OperationType.py
Lib_Communication/SensorDataMsg/: Msg.py  ValueType.py
Lib_GINOP/: AbsoluthePoseSensor.cpp  AbsoluthePoseSensor.h  CMakeLists.txt  CmakeLists.txt  FilteringManager.cpp  FilteringManager.h  IMUSensor.cpp  IMUSensor.h  INSSensor.cpp  INSSensor.h  KUKAyouBot.cpp  KUKAyouBot.h  Simulation.cpp  Simulation.h  ZMQFilterLogger.cpp  ZMQFilterLogger.h  truck.cpp  truck.h  youBotINSGPS.cpp  youBotINSGPS.h  youBotSystem.cpp  youBotSystem.h
Lib_Plotter/: CMakeLists.txt  FilterPlot.cpp  FilterPlot.h  figure.h
Lib_SensorFusion/: BaseSystem.cpp  BaseSystem.h  CMakeLists.txt  CmakeLists.txt  FilterLog.cpp  FilterLog.h  KalmanFilter.cpp  KalmanFilter.h  PartialCholevski.h  Sensor.cpp  Sensor.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  WAUKF.cpp  WAUKF.h  pinv.cpp
PlotterLib/: CMakeLists.txt  CmakeLists_.txt  FilterPlot.cpp  color.cc  figure.cc  highgui.cc  internal.h  plotter.cpp  plotter.h  window.cc  window.h
SensorFusionApp/: BaseSystem.h  CmakeLists.txt  CorrectDep.cpp  CorrectDep.h  FilterSystem.h  Function2.cpp  Function4.h  IMUSensor.h  Localisation2DBaseSystem.h  Sensor.h  StatisticValue.cpp  youBotSystem.cpp  youBotSystem.h
SensorFusionLib/: BaseSystem.cpp  BaseSystem.h  CallbackHandler.h  CmakeLists.txt  FilterSystem.cpp  FilterSystem.h  Filterlog.cpp  Filterlog.h  Function2.h  Function4.cpp  FunctionMerge.cpp  FunctionMerge.h  KalmanFilter.cpp  KalmanFilter.h  PartialCholevski.cpp  PartialCholevski.h  Sensor.cpp  Sensor.h  StatisticValue.cpp  StatisticValue.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  WAUKF.cpp  WAUKF.h  pinv.cpp  pinv.h
Tester/: CmakeLists.txt  FilterPlot.cpp  FilterPlot.h  FilterPlotter.cpp  FilterPlotter.h  IMUSensor.cpp  IMUSensor.h  Init.h  Simulation.cpp  Simulation.h  Simulation_youBot_Kalman.cpp  Simulation_youBot_Kalman.h  Simulation_youBot_WAUKF.cpp  Simulation_youBot_WAUKF.h  main.cpp  youBotSystem.cpp  youBotSystem.h
ZMQPub/: CmakeLists.txt  main.cpp
ZMQPub_test/: CMakeLists.txt  main.cpp
ZMQSub/: CmakeLists.txt  main.cpp
ZMQSub_test/: CMakeLists.txt  (+1 more)
communication/: CMakeLists.txt  CentralUnit.cpp  CentralUnit.h  ClockSynchronizer.cpp  ClockSynchronizer.h  Filter.cpp  Filter.h  Forwarder.cpp  Forwarder.h  IClockSynchronizer.cpp  IClockSynchronizer.h  ILogReader.h  Logger.cpp  Logger.h  NetworkConfig.cpp  NetworkConfig.h  Periphery.cpp  Periphery.h  RealTimeSimulator.cpp  RealTimeSimulator.h  Reciever.cpp  Reciever.h  RecieverViaZMQ.cpp  RecieverViaZMQ.h  SPDLogReader.cpp  SPDLogReader.h  SPDLogging.cpp  SPDLogging.h  SenderToSPDLog.cpp  SenderToSPDLog.h  SenderToZMQ.cpp  SenderToZMQ.h  SteppableSimulator.cpp  SteppableSimulator.h  ZMQClockSynchronizer.cpp  ZMQClockSynchronizer.h  ZMQCommunication.cpp  ZMQCommunication.h  ZMQPublisher.cpp  ZMQPublisher.h  (+24 more)
communication/DataMsgContentNameSpace/: Msg.py
communication/DataMsgNameSpace/: Msg.py
core/: BaseSystem.cpp  BaseSystem.h  CMakeLists.txt  Filter.cpp  Filter.h  KalmanFilter.cpp  KalmanFilter.h  PartialCholevski.cpp  PartialCholevski.h  Sensor.cpp  Sensor.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  WAUKF.cpp  WAUKF.h  pinv.cpp  pinv.h
example_app/: CMakeLists.txt  ReadMe.txt  main.cpp  networkconfig_1.json  networkconfig_1_noipc.json
example_app/localperiphery/: CMakeLists.txt  main.cpp
example_app/logger/: CMakeLists.txt  main.cpp
example_app/periphery/: CMakeLists.txt  main.cpp
example_app/periphery_w_clocksync/: CMakeLists.txt
example_app/remoteperiphery/: CMakeLists.txt  main.cpp
plotter/: CMakeLists.txt  color.cc
plotter_test/: CMakeLists.txt
tests/: CMakeLists.txt  networkconfig_local.json  test_clocksync_local.cpp  test_communication.cpp  test_configfile_init.cpp  test_spd_log.cpp  test_systemmanager.cpp  test_zmqsub_zmqpub.cpp
tests/common/: CMakeLists.txt
tests/unity/: CMakeLists.txt
tests/zmq/: CMakeLists.txt  test_atomics.cpp  test_capabilities - kutij6@gmail.com's conflict 01.24.2020_12.02.08.cpp  test_connect_resolve.cpp  test_ctx_destroy.cpp  test_metadata.cpp  test_pair_inproc.cpp  test_pair_tcp.cpp  test_req_relaxed.cpp  test_socket_null.cpp  testutil.cpp  testutil.hpp  testutil_monitoring.hpp  testutil_unity.cpp  testutil_unity.hpp
types/: AppLayer.cpp  AppLayer.h  Application.cpp  Application.h  CMakeLists.txt  DataMsg.cpp  DataMsg.h  FilterCore.h  PrintNestedException.cpp  PrintNestedException.h  StatisticValue.cpp  StatisticValue.h  defs.cpp  defs.h
(+44 files in other folders)
